tests/exec/assert-le.stderr
At line 1.1 Assertion failed left <= right:
left:  "abc"
right: "a"

Error occurred.
