tests/exec/assert-le.exec
cmd: load assert-le.ecl
status: 1
